@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model

'class Platform {
' -description
'}

class System {

}

class Database {
    reference
    description
    informalDesc
    technicalDesc
    duration
    cost
}

'class Category {
'   description
'}

class Property\ncontroller {
    name
    email
    position
    phone
}

class Unregistered\nuser {
    name
    phoneNumber
    email
}

System "1" - "0..*" Property\ncontroller : request >
System "1" - "0..*" Property\ncontroller : foward\ninformation <
Database "1.." - "0..*" System: owns >
Unregistered\nuser "1" - "0..*" System: interacts with >
Property\ncontroller "1." -- "*" Database : request >
Property\ncontroller "1." -- "*" Database : sends\nnecessary\ninformation <


@enduml